# jsondocstore

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  test.py
.github/workflows/: docs.yml  publish.yml
docs/: index.html
src/jsondocstore/: __init__.py  cli.py  core.py
