[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsondocstore"
version = "0.1.0"
description = "Simple JSON document storage on disk"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mirko Ortensi", email = "mirko.ortensi@gmail.com" },
]

[project.scripts]
jsondocstore = "jsondocstore.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
