[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsondocstore"
version = "0.2.1"
description = "Simple JSON document storage on disk"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mirko Ortensi", email = "mirko.ortensi@gmail.com" },
]
keywords = ["json", "storage", "document", "nosql", "disk", "embedded"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mortensi/jsondocstore"
Repository = "https://github.com/mortensi/jsondocstore"
"Documentation" = "https://mortensi.github.io/jsondocstore/"
"Bug Tracker" = "https://github.com/mortensi/jsondocstore/issues"

[project.scripts]
jsondocstore = "jsondocstore.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
